--- a/research/publications/index.html
+++ b/research/publications/index.html
@@ -75,6 +75,12 @@
                 <h3> Articles, book chapters, and other publications </h3>
                 <table>
                     <tr><td>
+                            Nathan Clisby, Scale-free Monte Carlo method for calculating the
+                            critical exponent &gamma; of self-avoiding walks.  <a
+                            href="http://arxiv.org/abs/1701.08415}{arXiv:1701.08415">arXiv:1701.08415</a>,
+                            submitted to J. Phys. A: Math. Theor. (2017).
+                    </td></tr>
+                    <tr><td>
                             Nathan Clisby and Burkhard D&uuml;nweg,
                             High precision estimate of the hydrodynamic
                             radius for self-avoiding walks. 
@@ -82,7 +88,7 @@
                                 href="https://doi.org/10.1103/PhysRevE.94.052102">Phys.
                                 Rev. E.</a> <b>94</b>: 052102 (2016).
     Chosen as an <a
-        href="http://journals.aps.org/pre#suggestions">Editors' suggestion</a>.
+        href="http://journals.aps.org/pre#suggestions">Editor's suggestion</a>.
                     </td></tr>
                     <tr><td>
                             Eric Horwath, Nathan Clisby, and Peter
