--- a/research/publications/index.html
+++ b/research/publications/index.html
@@ -77,7 +77,7 @@
                     <tr><td>
                             Nathan Clisby, Scale-free Monte Carlo method for calculating the
                             critical exponent &gamma; of self-avoiding walks.  <a
-                            href="http://arxiv.org/abs/1701.08415}{arXiv:1701.08415">arXiv:1701.08415</a>,
+                            href="http://arxiv.org/abs/1701.08415">arXiv:1701.08415</a>,
                             submitted to J. Phys. A: Math. Theor. (2017).
                     </td></tr>
                     <tr><td>
