--- a/BecSpeaksUp/index.html
+++ b/BecSpeaksUp/index.html
@@ -15,7 +15,9 @@
 
 </style><script role="script" id="twine-user-script" type="text/twine-javascript">
 
-</script><tw-passagedata pid="1" name="Bec has a problem" tags="" position="415,295">Bec is lucky because she lives with her mother, father, sister, two brothers, two dogs and a cat in a very friendly house in the Northern Territory.  She has a busy and active life.  Bec works 2 days a week, goes to college, goes out to the movies and to concerts.  Bec is a very happy person and loves to meet new people.
+</script><tw-passagedata pid="1" name="Bec has a problem" tags="" position="415,295">**Bec Speaks Up**
+
+Bec is lucky because she lives with her mother, father, sister, two brothers, two dogs and a cat in a very friendly house in the Northern Territory.  She has a busy and active life.  Bec works 2 days a week, goes to college, goes out to the movies and to concerts.  Bec is a very happy person and loves to meet new people.
 
 Most of all though, Bec loves to go bowling and she is very good at it.  This is a photo of Bec after she got a strike at bowling (she knocked down all ten pins in one go). You can see how happy she is.
 
