--- a/research/publications/index.html
+++ b/research/publications/index.html
@@ -75,6 +75,18 @@
                 <h3> Articles, book chapters, and other publications </h3>
                 <table>
                     <tr><td>
+                            Raoul D. Schram, Gerard T. Barkema, Rob H.
+                            Bisseling, and Nathan Clisby, 
+                            Exact enumeration of self-avoiding walks on
+                            BCC and FCC lattices
+                            <a
+                            href="http://arxiv.org/abs/1703.09340">arXiv:1703.09340</a>.
+                            See <a
+                                href="https://www.staff.science.uu.nl/~bisse101/SAW/">here</a>
+                            for the SAWdoubler release page, which
+                            implements the length-doubling enumeration algorithm.
+                    </td></tr>
+                    <tr><td>
                             Nathan Clisby, Scale-free Monte Carlo method for calculating the
                             critical exponent &gamma; of self-avoiding walks.  <a
                             href="http://arxiv.org/abs/1701.08415">arXiv:1701.08415</a>,
