--- a/research/publications/index.html
+++ b/research/publications/index.html
@@ -78,9 +78,9 @@
                             Raoul D. Schram, Gerard T. Barkema, Rob H.
                             Bisseling, and Nathan Clisby, 
                             Exact enumeration of self-avoiding walks on
-                            BCC and FCC lattices
+                            BCC and FCC lattices,
                             <a
-                            href="http://arxiv.org/abs/1703.09340">arXiv:1703.09340</a>.
+                            href="http://arxiv.org/abs/1703.09340">arXiv:1703.09340</a>,
                             See <a
                                 href="https://www.staff.science.uu.nl/~bisse101/SAW/">here</a>
                             for the SAWdoubler release page, which
@@ -88,14 +88,14 @@
                     </td></tr>
                     <tr><td>
                             Nathan Clisby, Scale-free Monte Carlo method for calculating the
-                            critical exponent &gamma; of self-avoiding walks.  <a
+                            critical exponent &gamma; of self-avoiding walks,  <a
                             href="http://arxiv.org/abs/1701.08415">arXiv:1701.08415</a>,
                             submitted to J. Phys. A: Math. Theor. (2017).
                     </td></tr>
                     <tr><td>
                             Nathan Clisby and Burkhard D&uuml;nweg,
                             High precision estimate of the hydrodynamic
-                            radius for self-avoiding walks. 
+                            radius for self-avoiding walks, 
                             <a
                                 href="https://doi.org/10.1103/PhysRevE.94.052102">Phys.
                                 Rev. E.</a> <b>94</b>: 052102 (2016).
