Formatting on publications page

--- a/research/publications/index.html
+++ b/research/publications/index.html
@@ -80,7 +80,7 @@
                             Exact enumeration of self-avoiding walks on
                             BCC and FCC lattices,
                             <a
-                            href="http://arxiv.org/abs/1703.09340">arXiv:1703.09340</a>,
+                            href="http://arxiv.org/abs/1703.09340">arXiv:1703.09340</a>.
                             See <a
                                 href="https://www.staff.science.uu.nl/~bisse101/SAW/">here</a>
                             for the SAWdoubler release page, which
