Added MC of 4d SAWs publication to list

--- a/research/publications/index.html
+++ b/research/publications/index.html
@@ -75,12 +75,18 @@
                 <h3> Articles, book chapters, and other publications </h3>
                 <table>
                     <tr><td>
+                            Nathan Clisby, 
+                            Monte Carlo study of four-dimensional
+                            self-avoiding walks of up to one billion steps,
+                            <a href="https://arxiv.org/abs/1703.10557">arXiv:1703.10557</a> (2017).
+                    </td></tr>
+                    <tr><td>
                             Raoul D. Schram, Gerard T. Barkema, Rob H.
                             Bisseling, and Nathan Clisby, 
                             Exact enumeration of self-avoiding walks on
                             BCC and FCC lattices,
                             <a
-                            href="http://arxiv.org/abs/1703.09340">arXiv:1703.09340</a>.
+                            href="http://arxiv.org/abs/1703.09340">arXiv:1703.09340</a> (2017).
                             See <a
                                 href="https://www.staff.science.uu.nl/~bisse101/SAW/">here</a>
                             for the SAWdoubler release page, which
