Changed updates, added references.

--- a/index.html
+++ b/index.html
@@ -100,47 +100,92 @@
                 <!--</p>-->
 
                 <p>
-                <b>Recent updates (November 2016)</b>
+                <b>Recent updates (March 2017)</b>
                 </p>
-                <p>
-                Together with <a
-                    href="http://users.monash.edu.au/~garonit/">Tim
-                    Garoni</a>, back in 2010 I organised a satellite
-                workshop for Statphys called 
-                <a href="mcalgorithms">Monte Carlo Algorithms in
-                    Statistical Physics</a>. I designed the website and
-                am migrating it here because the old webserver will be
-                decommissioned soon (vale lattice). There is a
-                fantastic collection of <a
-                    href="mcalgorithms/talks.html">talks</a> which I intend 
-                to keep permanently available. Incidentally, the logo
-                for the conference is meant to evoke the game of
+                <ul>
+                <li>
+                Simulations of SAWs in 4d have enabled the calculation
+                of the logarithmic corrections to great accuracy:
+                <i>Monte Carlo study of four-dimensional
+                self-avoiding walks of up to one billion steps</i>,
+                <a href="https://arxiv.org/abs/1703.10557">arXiv:1703.10557</a> (2017).
+                </li>
+                <li>
+                By using the length-doubling algorithm and a novel series
+                analysis method (due to Tony Guttmann), 
+                we have obtained
+                accurate estimates of various quantities associated with
+                SAWs on the BCC and FCC lattices: <i>Exact enumeration of
+                    self-avoiding walks on BCC and FCC lattices</i>, <a
+                    href="http://arxiv.org/abs/1703.09340">arXiv:1703.09340</a>
+                (2017).
+                (Work with Raoul D. Schram,
+                Gerard T. Barkema, and Rob H. Bisseling.)
+                </li>
+                <li>
+                By using a novel ``scale-free'' version of the pivot
+                algorithm, I have been able to calculate an extremely
+                accurate estimate for the critical exponent &gamma; for
+                self-avoiding walks, obtaining &gamma; = 1.15695300(95).
+                The paper is: <i>Scale-free Monte Carlo method for
+                calculating the critical exponent &gamma; of
+                self-avoiding walks</i>,  <a
+                    href="http://arxiv.org/abs/1701.08415">arXiv:1701.08415</a>.
+                </li>
+                <li>
+                With Burkhard D&uuml;nweg, I've published a paper which
+                includes an accurate calculation of the hydrodynamic
+                radius for SAWs, and calculates the Flory exponent to
+                unprecedented accuracy, &nu; = 0.58759700(40):
+                <i>High precision estimate of the hydrodynamic
+                    radius for self-avoiding walks</i>, 
                 <a
-                    href="https://en.wikipedia.org/wiki/Two-up">&ldquo;two-up&rdquo;</a>,
-                a game of chance that is an
-                Australian national past-time. The creation of this logo
-                (idea + execution) is what I consider to be my greatest
-                achievement, but I have literally never received a
-                comment about it. So, if you think it&rsquo;s even
-                kind-of neat, let me know and make my day.
-                </p>
-                <p>
-                In March 2015 a mini-symposium was held in honour of Ian
-                Enting, to celebrate his unique career in which he has
-                made considerable contributions in the fields of
-                Climate, Atmospheric Composition and Statistical
-                Physics. You can find more information, including links
-                to some fascinating talks, at the <a
-                    href="entingfest">Entingfest</a> webpage.
-                </p>
-                <p>
+                    href="https://doi.org/10.1103/PhysRevE.94.052102">Phys.
+                    Rev. E.</a> <b>94</b>: 052102 (2016).
+        It was chosen as an <a
+            href="http://journals.aps.org/pre#suggestions">Editor's suggestion</a>.
+                </li>
+                <!--<b>Recent updates (November 2016)</b>-->
+                <!--<p>-->
+                <!--Together with <a-->
+                    <!--href="http://users.monash.edu.au/~garonit/">Tim-->
+                    <!--Garoni</a>, back in 2010 I organised a satellite-->
+                <!--workshop for Statphys called -->
+                <!--<a href="mcalgorithms">Monte Carlo Algorithms in-->
+                    <!--Statistical Physics</a>. I designed the website and-->
+                <!--am migrating it here because the old webserver will be-->
+                <!--decommissioned soon (vale lattice). There is a-->
+                <!--fantastic collection of <a-->
+                    <!--href="mcalgorithms/talks.html">talks</a> which I intend -->
+                <!--to keep permanently available. Incidentally, the logo-->
+                <!--for the conference is meant to evoke the game of-->
+                <!--<a-->
+                    <!--href="https://en.wikipedia.org/wiki/Two-up">&ldquo;two-up&rdquo;</a>,-->
+                <!--a game of chance that is an-->
+                <!--Australian national past-time. The creation of this logo-->
+                <!--(idea + execution) is what I consider to be my greatest-->
+                <!--achievement, but I have literally never received a-->
+                <!--comment about it. So, if you think it&rsquo;s even-->
+                <!--kind-of neat, let me know and make my day.-->
+                <!--</p>-->
+                <!--<p>-->
+                <!--In March 2015 a mini-symposium was held in honour of Ian-->
+                <!--Enting, to celebrate his unique career in which he has-->
+                <!--made considerable contributions in the fields of-->
+                <!--Climate, Atmospheric Composition and Statistical-->
+                <!--Physics. You can find more information, including links-->
+                <!--to some fascinating talks, at the <a-->
+                    <!--href="entingfest">Entingfest</a> webpage.-->
+                <!--</p>-->
+                <li>
 <a
     href="https://scholar.google.com.au/citations?hl=en&user=vLenKQMAAAAJ">Jason
     Whyte</a> has written a feature article which gives a detailed
 but accessible explanation on the ingredients for fast Monte Carlo
 simulation of self-avoiding walks. Please see 
 the <a href="/projects/saw_feature/">SAW feature</a> page.
-                </p>
+                </li>
+                </ul>
                 <!--<h3>Updates</h3>-->
                 <!--[><table width="100%" style="table-layout:fixed;"><]-->
                 <!--<table>-->
