--- a/index.html
+++ b/index.html
@@ -130,7 +130,8 @@
                 The paper is: <i>Scale-free Monte Carlo method for
                 calculating the critical exponent &gamma; of
                 self-avoiding walks</i>,  <a
-                    href="http://arxiv.org/abs/1701.08415">arXiv:1701.08415</a>.
+                    href="http://arxiv.org/abs/1701.08415">arXiv:1701.08415</a>
+                (2017).
                 </li>
                 <li>
                 With Burkhard D&uuml;nweg, I've published a paper which
