--- a/BecSpeaksUp/index.html
+++ b/BecSpeaksUp/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html manifest="becspeaksup.appcache">
 <html>
 <head>
 <meta charset="utf-8">
@@ -11,21 +12,34 @@
 
 <tw-story></tw-story>
 
-<tw-storydata name="Bec Speaks Up" startnode="1" creator="Twine" creator-version="2.1.1" ifid="EE08950F-D780-499F-8009-5E213E1996A7" format="Harlowe" format-version="1.2.3" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">
+<tw-storydata name="Bec Speaks Up" startnode="1" creator="Twine" creator-version="2.1.1" ifid="EE08950F-D780-499F-8009-5E213E1996A7" format="Harlowe" format-version="1.2.3" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">body {
+ font-size: 100%;
+ font-family: Verdana;
+}
+
+img {
+    display: block;
+    margin: auto;
+    width: 40%;
+}
 
 </style><script role="script" id="twine-user-script" type="text/twine-javascript">
 
-</script><tw-passagedata pid="1" name="Bec has a problem" tags="" position="415,295">**Bec Speaks Up**
+
+
+</script><tw-passagedata pid="1" name="Start" tags="" position="415,295">&lt;img style=&quot;float:right;margin: 0 0 10px 10px;&quot; src=&quot;img/logo.jpg&quot; alt=&quot;logo&quot;&gt;
 
 Bec is lucky because she lives with her mother, father, sister, two brothers, two dogs and a cat in a very friendly house in the Northern Territory.  She has a busy and active life.  Bec works 2 days a week, goes to college, goes out to the movies and to concerts.  Bec is a very happy person and loves to meet new people.
 
 Most of all though, Bec loves to go bowling and she is very good at it.  This is a photo of Bec after she got a strike at bowling (she knocked down all ten pins in one go). You can see how happy she is.
 
-<img src="img/BecBowling.jpg" height="300" alt="Bec Bowling">
+&lt;img src=&quot;img/BecBowling.jpg&quot; alt=&quot;Bec Bowling&quot;&gt;
 
 Because she has trouble catching buses, a support worker comes every week to pick Bec up and take her bowling.  The support worker works for Helpability, which is a place which helps people with a disability go out and do things, like bowling, or going to the pictures or even just going out for a walk.
 
 Sometimes, the support worker doesn’t arrive, and when that happens, Bec becomes very sad.
+
+&lt;img src=&quot;img/BecIsSad.jpg&quot; alt=&quot;Bec Is Sad&quot;&gt;
 
 She doesn’t know what she should do.
 
@@ -33,67 +47,114 @@ She doesn’t know what she should do.
 
 [[Bec should keep her problem secret.-&gt;Bec keeps her problem secret]]
 
-[[Bec should tell someone about her problem.-&gt;Bec tells someone about her problem]]</tw-passagedata><tw-passagedata pid="2" name="Bec keeps her problem secret" tags="" position="340,445">Bec is a little bit worried about talking to people about the support worker not turning up.  After all, the support worker already knows that Bec can’t go to bowling sometimes and doesn’t think that is bad.  Also, Bec thinks that the support worker’s boss at Helpability already knows and hasn’t fixed the problem.
+[[Bec should tell someone about her problem.-&gt;Bec tells someone about her problem]]</tw-passagedata><tw-passagedata pid="2" name="Bec keeps her problem secret" tags="" position="340,445">&lt;img style=&quot;float:right;margin: 0 0 10px 10px;&quot; src=&quot;img/logo.jpg&quot; alt=&quot;logo&quot;&gt;
+
+Bec is a little bit worried about talking to people about the support worker not turning up.  After all, the support worker already knows that Bec can’t go to bowling sometimes and doesn’t think that is bad.  Also, Bec thinks that the support worker’s boss at Helpability already knows and hasn’t fixed the problem.
 
 Bec thinks that if she speaks up, then the support worker will never come, and so she decides to keep quiet.
 
 Helpability don’t know that Bec’s support worker is not coming, and so they keep paying her. She comes less and less often, and in the end, Bec hardly gets to go bowling at all.  She is very, very sad.
 
-**The End**</tw-passagedata><tw-passagedata pid="3" name="Bec tells someone about her problem" tags="" position="490,445">Bec decides to tell someone about her problem.  While she is a bit worried, she loves going bowling so much that she decides she has to do something to fix the problems.
+&lt;img src=&quot;img/BecIsVeryVerySad.jpg&quot; alt=&quot;Bec Is Very Very Sad&quot;&gt;
+
+
+**The End**
+
+[[Start again!-&gt;Start]]</tw-passagedata><tw-passagedata pid="3" name="Bec tells someone about her problem" tags="" position="490,445">&lt;img style=&quot;float:right;margin: 0 0 10px 10px;&quot; src=&quot;img/logo.jpg&quot; alt=&quot;logo&quot;&gt;
+
+Bec decides to tell someone about her problem.  While she is a bit worried, she loves going bowling so much that she decides she has to do something to fix the problems.
 
 **Who should Bec talk to?**
 
 [[Bec should call the Health and Community Services Complaints Commission-&gt;Bec calls the Health and Community Services Complaints Commission]]
 
-[[Bec should talk to her support worker-&gt;Bec talks to her support worker]]
+[[Bec should talk to her support worker.-&gt;Bec talks to her support worker]]
 
-[[Bec should talk to her mum and dad-&gt;Bec talks to her mum and dad]]</tw-passagedata><tw-passagedata pid="4" name="Bec calls the Health and Community Services Complaints Commission" tags="" position="340,595">Bec calls the HCSCC and speaks to Leigh. Leigh talks with her about what she can do next, like talking to the support worker or talking to her mum and dad. Leigh says to call the HCSCC again if these things don’t work.
+[[Bec should talk to her mum and dad.-&gt;Bec talks to her mum and dad]]</tw-passagedata><tw-passagedata pid="4" name="Bec calls the Health and Community Services Complaints Commission" tags="" position="340,595">&lt;img style=&quot;float:right;margin: 0 0 10px 10px;&quot; src=&quot;img/logo.jpg&quot; alt=&quot;logo&quot;&gt;
 
-**Who should Bec decide to talk to?**
+Bec calls the HCSCC and speaks to Leigh. Leigh talks with her about what she can do next, like talking to the support worker or talking to her mum and dad. Leigh says to call the HCSCC again if these things don’t work.
 
-[[Bec should talk to her support worker-&gt;Bec talks to her support worker]]
+&lt;img src=&quot;img/Leigh.jpg&quot; alt=&quot;Leigh&quot;&gt;
 
-[[Bec should talk to her mum and dad-&gt;Bec talks to her mum and dad]]</tw-passagedata><tw-passagedata pid="5" name="Bec talks to her support worker" tags="" position="510,713.3333333333334">Bec is a bit scared about talking to the support worker, because she is worried that the support worker will get upset.  
+**Who does Bec decide to talk to?**
+
+[[Bec talks to her support worker.-&gt;Bec talks to her support worker]]
+
+[[Bec talks to her mum and dad.-&gt;Bec talks to her mum and dad]]</tw-passagedata><tw-passagedata pid="5" name="Bec talks to her support worker" tags="" position="510,713">&lt;img style=&quot;float:right;margin: 0 0 10px 10px;&quot; src=&quot;img/logo.jpg&quot; alt=&quot;logo&quot;&gt;
+
+Bec is a bit scared about talking to the support worker, because she is worried that the support worker will get upset.  
 
 Before she talks to the support worker Bec practises what she is going to say, and the next time the support worker comes to her house to take her to bowling, Bec tells her how much she loves bowling and how sad she is when the support worker doesn’t come.  Bec tells the support worker that it needs to be fixed so that she never has to miss bowling again.
+
+&lt;img src=&quot;img/BecHoldingUpHand.jpg&quot; alt=&quot;Bec Holding Up Hand&quot;&gt;
 
 **Is the problem fixed?**
 
 [[Yes.-&gt;Yes, the problem is fixed]]
 
-[[No.-&gt;No, the problem is not fixed]]</tw-passagedata><tw-passagedata pid="6" name="Bec talks to her mum and dad" tags="" position="786.6666666666667,721.6666666666666">One night, while they are eating their dinner, Bec tells her mum and dad that sometimes she isn’t able to go bowling because the support worker doesn’t come.  She tells her mum and dad that sometimes she doesn’t even know the support worker isn’t coming and she waits and waits for her.  
+[[No.-&gt;No, the problem is not fixed]]</tw-passagedata><tw-passagedata pid="6" name="Bec talks to her mum and dad" tags="" position="786,721">&lt;img style=&quot;float:right;margin: 0 0 10px 10px;&quot; src=&quot;img/logo.jpg&quot; alt=&quot;logo&quot;&gt;
+
+One night, while they are eating their dinner, Bec tells her mum and dad that sometimes she isn’t able to go bowling because the support worker doesn’t come.  She tells her mum and dad that sometimes she doesn’t even know the support worker isn’t coming and she waits and waits for her.  
 
 Bec’s mum and dad decide to call the Manager of Helpability to talk to her about the problem.
 
 **Is the problem fixed?**
 
-[[Yes-&gt;Yes]]
+[[Yes.-&gt;Yes]]
 
-[[No-&gt;No]]</tw-passagedata><tw-passagedata pid="7" name="Yes, the problem is fixed" tags="" position="435,863.3333333333334">The support worker makes sure that if she can’t come to take Bec bowling, she arranges for someone else to take her.
+[[No.-&gt;No]]</tw-passagedata><tw-passagedata pid="7" name="Yes, the problem is fixed" tags="" position="435,863">&lt;img style=&quot;float:right;margin: 0 0 10px 10px;&quot; src=&quot;img/logo.jpg&quot; alt=&quot;logo&quot;&gt;
+
+The support worker makes sure that if she can’t come to take Bec bowling, she arranges for someone else to take her.
 
 Bec feels very proud of herself.  She had a problem and she did something about it, and she knows that she will be able to do it again. Bec never misses bowling again, because the support worker always make sure that Bec is able to go bowling.
 
 Bec is super super happy.
 
-**The End**</tw-passagedata><tw-passagedata pid="8" name="No, the problem is not fixed" tags="" position="585,863.3333333333334">Bec decides to call the Health and Community Services Complaints Commission. She speaks to Robynne about the problem. Robynne phones the Manager of Helpability.  She tells her that Bec rang the Health and Community Services Complaints Commission because she hadn’t been able to fix the problem so far.
+&lt;img src=&quot;img/BecIsSuperSuperHappy.jpg&quot; alt=&quot;Bec Is Super Super Happy&quot;&gt;
+
+
+**The End**
+
+[[Start again!-&gt;Start]]</tw-passagedata><tw-passagedata pid="8" name="No, the problem is not fixed" tags="" position="585,863">&lt;img style=&quot;float:right;margin: 0 0 10px 10px;&quot; src=&quot;img/logo.jpg&quot; alt=&quot;logo&quot;&gt;
+
+Bec decides to call the Health and Community Services Complaints Commission. She speaks to Robynne about the problem. Robynne phones the Manager of Helpability.  She tells her that Bec rang the Health and Community Services Complaints Commission because she hadn’t been able to fix the problem so far.
+
+&lt;img src=&quot;img/Robynne.jpg&quot; alt=&quot;Robynne&quot;&gt;
 
 The Manager speaks to the support worker about the problem.  She also gives Bec a phone number to ring if the support worker does not arrive so that someone else can take her bowling. Next week Bec goes bowling and gets lots of strikes! Bec is super happy because she spoke up and now the problem is fixed.
 
-**The End**</tw-passagedata><tw-passagedata pid="9" name="Yes" tags="" position="711.6666666666667,871.6666666666666">Bec’s mum and dad arrange a meeting with the Manager of Helpability.  Bec comes with them, because she can tell the Manager what it is like for her and how upset she gets when the support worker doesn’t come.  
+&lt;img src=&quot;img/BecIsSuperHappy.jpg&quot; alt=&quot;Bec Is Super Happy&quot;&gt;
+
+
+**The End**
+
+[[Start again!-&gt;Start]]</tw-passagedata><tw-passagedata pid="9" name="Yes" tags="" position="711,871">&lt;img style=&quot;float:right;margin: 0 0 10px 10px;&quot; src=&quot;img/logo.jpg&quot; alt=&quot;logo&quot;&gt;
+
+Bec’s mum and dad arrange a meeting with the Manager of Helpability.  Bec comes with them, because she can tell the Manager what it is like for her and how upset she gets when the support worker doesn’t come.  
 
 The Manager speaks to the support worker about the problem.  She also gives Bec a phone number to ring if the support worker does not arrive so that someone else can take her bowling.
 
 Bec never misses bowling again.  She is super happy because she spoke up and the problem is now resolved.
 
-**The End**</tw-passagedata><tw-passagedata pid="10" name="No" tags="" position="861.6666666666667,871.6666666666666">Bec’s mum and dad arrange a meeting with the Manager of Helpability.  Bec comes with them, because she can tell the Manager what it is like for her and how upset she gets when the support worker doesn’t come.
+&lt;img src=&quot;img/BecIsSuperHappy.jpg&quot; alt=&quot;Bec Is Super Happy&quot;&gt;
+
+**The End**
+
+[[Start again!-&gt;Start]]</tw-passagedata><tw-passagedata pid="10" name="No" tags="" position="861,871">&lt;img style=&quot;float:right;margin: 0 0 10px 10px;&quot; src=&quot;img/logo.jpg&quot; alt=&quot;logo&quot;&gt;
+
+Bec’s mum and dad arrange a meeting with the Manager of Helpability.  Bec comes with them, because she can tell the Manager what it is like for her and how upset she gets when the support worker doesn’t come.
 
 The Manager from Helpability says that sometimes the support worker doesn’t let them know that she won’t be coming to work.  She also says that she will try to fix the problem but there is no way to make sure that Bec will always get to bowling.  
 
 The next week, the support worker doesn’t turn up and once again, Bec is sad.
 
+&lt;img src=&quot;img/BecIsSad.jpg&quot; alt=&quot;Bec Is Sad&quot;&gt;
+
 She is worried that she won’t be able to get strikes any more because she isn’t able to practise her bowling.  Bec tells her Mum and Dad.
 
 Bec’s mum and dad decide to call the Health and Community Services Complaints Commission.  They speak to Liz about the problem.  Liz also speaks to Bec so she can understand how Bec feels.
+
+&lt;img src=&quot;img/Liz.jpg&quot; alt=&quot;Liz&quot;&gt;
 
 Liz phones the Manager of Helpability.  She tells her that Bec’s family contacted the Health and Community Services Complaints Commission because they hadn’t been able to fix the problem so far.
 
@@ -101,7 +162,11 @@ The Manager speaks to the support worker about the problem.  She also gives Bec 
 
 Next week Bec goes bowling and gets lots of strikes! Bec is super happy because she spoke up and now the problem is fixed.
 
-**The End**</tw-passagedata></tw-storydata>
+&lt;img src=&quot;img/BecIsSuperHappy.jpg&quot; alt=&quot;Bec Is Super Happy&quot;&gt;
+
+**The End**
+
+[[Start again!-&gt;Start]]</tw-passagedata></tw-storydata>
 
 <script title="Twine engine code" data-main="harlowe">"use strict";function _toConsumableArray(e){if(Array.isArray(e)){for(var t=0,n=Array(e.length);t<e.length;t++)n[t]=e[t];return n}return Array.from(e)}var _slicedToArray=function(){function e(e,t){var n=[],r=!0,o=!1,i=void 0;try{for(var a,s=e[Symbol.iterator]();!(r=(a=s.next()).done)&&(n.push(a.value),!t||n.length!==t);r=!0);}catch(e){o=!0,i=e}finally{try{!r&&s.return&&s.return()}finally{if(o)throw i}}return n}return function(t,n){if(Array.isArray(t))return t;if(Symbol.iterator in Object(t))return e(t,n);throw new TypeError("Invalid attempt to destructure non-iterable instance")}}(),_typeof="function"==typeof Symbol&&"symbol"==typeof Symbol.iterator?function(e){return typeof e}:function(e){return e&&"function"==typeof Symbol&&e.constructor===Symbol&&e!==Symbol.prototype?"symbol":typeof e};!function(){/**
  * @license almond 0.3.3 Copyright jQuery Foundation and other contributors.
