Updated address UoM->Swinburne.

--- a/contact/index.html
+++ b/contact/index.html
@@ -68,21 +68,18 @@
                 <p>
                 <table>
                     <tr><td>Nathan Clisby</td></tr>
-                    <tr><td>ARC Centre of Excellence for Mathematics and
-                            Statistics of Complex Systems
-                            (MASCOS)</td></tr>
-                    <tr><td>139 Barry Street</td></tr>
-                    <tr><td>The University of Melbourne, Victoria,
-                            3010</td></tr>
+                    <tr><td>Department of Mathematics</td></tr>
+                    <tr><td>Swinburne University of Technology</td></tr>
+                    <tr><td>Hawthorn, Victoria, 3122</td></tr>
                     <tr><td>Australia</td></tr>
                 </table>
 
                 <table>
-                    <tr><td>Tel.:  </td><td> +61 3 8344 3759</td></tr>
-                    <tr><td>Fax:  </td><td> +61 3 9347 8165
-                            </td></tr>
+                    <tr><td>Tel.:  </td><td> +61 3 9214 8020</td></tr>
+                    <!--<tr><td>Fax:  </td><td> +61 3 9347 8165-->
+                            <!--</td></tr>-->
                     <tr><td>Email:  </td><td> 
-       <a href="mailto:nclisby@unimelb.edu.au">nclisby@unimelb.edu.au</a> (work)</td></tr>
+       <a href="mailto:nclisby@swin.edu.au">nclisby@swin.edu.au</a> (work)</td></tr>
                     <tr><td>Email:  </td><td> 
         <a href="mailto:clisby@gmail.com">clisby@gmail.com</a>
         (personal) </td></tr>
