--- a/index.html
+++ b/index.html
@@ -75,9 +75,11 @@
             </div>
             Welcome to my homepage! 
                 I'm a mathematical physicist in the 
-                <a href="http://www.ms.unimelb.edu.au/">School of Mathematics and Statistics</a> at the 
-                <a href="http://www.unimelb.edu.au/">University of
-                    Melbourne</a>, supported by an ARC Future Fellowship.
+                <a
+                    href="http://www.swinburne.edu.au/science-engineering-technology/schools-departments/science/mathematics/">Department of Mathematics</a> at 
+                <a href="http://www.swinburne.edu.au/">Swinburne
+                    University of Technology</a>,
+                    supported by an ARC Future Fellowship.
                 I'm also an associate investigator of 
                 <a href="http://acems.org.au/">ACEMS</a>.
                 </p>
