--- a/contact/index.html
+++ b/contact/index.html
@@ -68,12 +68,24 @@
                 <p>
                 <table>
                     <tr><td>Nathan Clisby</td></tr>
+                    <tr><td>Office EN710a (Level 7, Engineering
+                            building; <a
+                                href="http://www.swinburne.edu.au/science-engineering-technology/schools-departments/science/mathematics/contact/">map</a>)</td></tr>
                     <tr><td>Department of Mathematics</td></tr>
                     <tr><td>Swinburne University of Technology</td></tr>
-                    <tr><td>Hawthorn, Victoria, 3122</td></tr>
+                    <tr><td>John Street, Hawthorn, Victoria, 3122</td></tr>
                     <tr><td>Australia</td></tr>
+                    <tr><td></td></tr>
+                    <tr><td></td></tr>
+                    <tr><td>Mailing address:</td></tr>
+                    <tr><td></td></tr>
+                    <tr><td>Nathan Clisby</td></tr>
+                    <tr><td>Mail H38</td></tr>
+                    <tr><td>PO Box 218</td></tr>
+                    <tr><td>Hawthorn, VIC, 3122</td></tr>
+                    <tr><td></td></tr>
+                    <tr><td></td></tr>
                 </table>
-
                 <table>
                     <tr><td>Tel.:  </td><td> +61 3 9214 8020</td></tr>
                     <!--<tr><td>Fax:  </td><td> +61 3 9347 8165-->
