Minor text edit.

--- a/projects/lrw/index.html
+++ b/projects/lrw/index.html
@@ -133,7 +133,8 @@
 <!--<div style="text-align:left;width:800px">-->
 <center>
 <p>
-Increase and decrease alpha with up and down arrows, or editing text in
+Increase and decrease alpha with right and left arrows respectively, or
+by editing text in
 box. r to generate a new
 random walk (refresh).
 </p>
