Added min size option, points only option.

--- a/projects/lrw/index.html
+++ b/projects/lrw/index.html
@@ -151,7 +151,7 @@ random walk (refresh).
         <h3>&nbsp;&nbsp;Decrease alpha&nbsp;&nbsp;</h3>
     </button>
     &nbsp;&nbsp;<button onclick="update_a()" style="margin:0;padding:0;line-height:0.8em;">
-        <h3>&nbsp;&nbsp;Update alpha&nbsp;&nbsp;</h3>
+        <h3>&nbsp;&nbsp;Redraw with current parameters&nbsp;&nbsp;</h3>
     </button>
 <!--</div>-->
         </center><br/>
@@ -161,6 +161,9 @@ Length: <input type="text" name="n" id="n" size="4" value="100"/>
 &nbsp; &nbsp; &nbsp; 
 Alpha: <input type="text" name="a" id="a" size="4" value="1.0"/>
 &nbsp; &nbsp; &nbsp; 
+Points only: <input type="checkbox" name="points_only" id="points_only" value="points_only"/>
+&nbsp; &nbsp; &nbsp; 
+Min size: <input type="checkbox" name="min_size" id="min_size" value="min_size" checked/>
 </form><br/>
 </center>
 <center>
