Changed lrw colour to make points more visible.

--- a/projects/lrw/index.html
+++ b/projects/lrw/index.html
@@ -69,7 +69,9 @@
         }
         if (w > h) w = h;
         if (h > w) h = w;
-        document.write('<svg id="path_svg" width="'+w+'" height="'+h+'">');
+        <!--document.write('<svg id="path_svg" width="'+w+'" height="'+h+'">');-->
+        document.write('<svg id="path_svg" width="'+w+'" height="'+h+'" style="background-color: #000;">');
+        
     }
 
 </script>
