Added giigke naos kubj.

--- a/contact/index.html
+++ b/contact/index.html
@@ -70,7 +70,10 @@
                     <tr><td>Nathan Clisby</td></tr>
                     <tr><td>Office EN710a (Level 7, Engineering
                             building; <a
-                                href="http://www.swinburne.edu.au/science-engineering-technology/schools-departments/science/mathematics/contact/">map</a>)</td></tr>
+                                href="http://www.swinburne.edu.au/science-engineering-technology/schools-departments/science/mathematics/contact/">map
+                    of campus</a>, <a
+                    href="https://drive.google.com/open?id=1OuxMlfj8gQVEbChoAFbiAJM_y0I&usp=sharing">directions
+                    to office</a>)</td></tr>
                     <tr><td>Department of Mathematics</td></tr>
                     <tr><td>Swinburne University of Technology</td></tr>
                     <tr><td>John Street, Hawthorn, Victoria, 3122</td></tr>
