--- a/projects/lrw/index.html
+++ b/projects/lrw/index.html
@@ -146,14 +146,18 @@ random walk (refresh).
 <center>
     <button onclick="refresh_path()"><h3>Generate new random walk<h3></button>
     <!--<div style="whitespace:no-wrap;">-->
-    &nbsp;&nbsp;<button onclick="increase_a()" style="margin:0;padding:0;line-height:0.8em;">
+    &nbsp;&nbsp;<button onClick="increase_a()" style="margin:0;padding:0;line-height:0.8em;">
         <h3>&nbsp;&nbsp;Increase alpha&nbsp;&nbsp;</h3>
     </button>
-    &nbsp;&nbsp;<button onclick="decrease_a()" style="margin:0;padding:0;line-height:0.8em;">
+    &nbsp;&nbsp;<button onClick="decrease_a()" style="margin:0;padding:0;line-height:0.8em;">
         <h3>&nbsp;&nbsp;Decrease alpha&nbsp;&nbsp;</h3>
     </button>
-    &nbsp;&nbsp;<button onclick="update_a()" style="margin:0;padding:0;line-height:0.8em;">
+    &nbsp;&nbsp;<button onClick="update_a()" style="margin:0;padding:0;line-height:0.8em;">
         <h3>&nbsp;&nbsp;Redraw with current parameters&nbsp;&nbsp;</h3>
+            </button>
+        &nbsp;&nbsp;<button onClick="(function () { var e = document.createElement('script'); e.setAttribute('src', 'svg-crowbar.js'); e.setAttribute('class', 'svg-crowbar'); document.body.appendChild(e); })();" style="margin:0;padding:0;line-height:0.8em;">
+            <h3>&nbsp;&nbsp;Download svg&nbsp;&nbsp;</h3>
+            </button>
     </button>
 <!--</div>-->
         </center><br/>
@@ -165,7 +169,7 @@ Alpha: <input type="text" name="a" id="a" size="4" value="1.0"/>
 &nbsp; &nbsp; &nbsp; 
 Points only: <input type="checkbox" name="points_only" id="points_only" value="points_only"/>
 &nbsp; &nbsp; &nbsp; 
-Min size: <input type="checkbox" name="min_size" id="min_size" value="min_size" checked/>
+Min size: <input type="checkbox" name="min_size" id="min_size" value="min_size" />
 </form><br/>
 </center>
 <center>
