--- a/projects/lrw/index.html
+++ b/projects/lrw/index.html
@@ -167,7 +167,7 @@ Length: <input type="text" name="n" id="n" size="4" value="100"/>
 &nbsp; &nbsp; &nbsp; 
 Alpha: <input type="text" name="a" id="a" size="4" value="1.0"/>
 &nbsp; &nbsp; &nbsp; 
-Points only: <input type="checkbox" name="points_only" id="points_only" value="points_only"/>
+Points only: <input type="checkbox" name="points_only" id="points_only" value="points_only" checked/>
 &nbsp; &nbsp; &nbsp; 
 Min size: <input type="checkbox" name="min_size" id="min_size" value="min_size" />
 </form><br/>
