--- a/links/index.html
+++ b/links/index.html
@@ -64,9 +64,15 @@
                 </div>
                 </h1>
                 <p>
-                These links are from my old webpage, and are several
-                years out-of-date.
+                A collection of links to things I find interesting and
+                useful.
                 </p>
+                <!--<p>-->
+                <!--These links are from my old webpage, and are several-->
+                <!--years out-of-date.-->
+                <!--</p>-->
+
+
 <table width="100%" style="table-layout:fixed;">
     <tr> <th colspan="4"> News, Opinion and Reference </th> </tr>
     <tr><td><a href="http://www.theage.com.au/">The Age</a></td> <td><a
@@ -281,6 +287,231 @@
                 Cranitch campaign page</a></td></tr>
     <td></td>
 </table>
+
+
+
+
+
+
+
+
+
+
+
+<!--<table width="100%" style="table-layout:fixed;">-->
+    <!--<tr> <th colspan="4"> News, Opinion and Reference </th> </tr>-->
+    <!--<tr><td><a href="http://www.theage.com.au/">The Age</a></td> <td><a-->
+                <!--href="http://www.theaustralian.news.com.au/">The-->
+                <!--Australian</a></td> <td><a-->
+                <!--href="http://www.news.com.au/">news.com.au</a></td>-->
+        <!--<td><a href="http://www.nytimes.com/">NY Times</a></td></tr>-->
+    <!--<tr><td><a href="http://slashdot.org/index.pl">Slashdot</a></td>-->
+        <!--<td><a href="http://www.sciencedaily.com/">Science-->
+                <!--Daily</a></td> <td><a-->
+                <!--href="http://digg.com/">Digg</a></td> <td><a-->
+                <!--href="http://larvatusprodeo.net/">Larvatus-->
+                <!--Prodeo</a></td></tr>-->
+    <!--<tr><td><a href="http://www.themonthly.com.au/tm/">The-->
+                <!--Monthly</a></td> <td><a-->
+                <!--href="http://www.economist.com/index.html?natrans">The-->
+                <!--Economist</a></td> <td><a-->
+                <!--href="http://www.abc.net.au/news/">ABC news</a></td>-->
+        <!--<td><a href="http://www.google.com/trends/hottrends?sa=X">Google-->
+                <!--Trends</a></td></tr>-->
+    <!--<tr><td><a href="http://www.onthemedia.org/">On The Media</a></td>-->
+        <!--<td><a href="http://www.npr.org/">NPR</a></td> <td><a-->
+                <!--href="http://arstechnica.com/">Ars Technica</a></td>-->
+        <!--<td><a href="http://www.jornada.unam.mx/">La-->
+                <!--Jornada</a></td></tr>-->
+    <!--<tr><td><a-->
+                <!--href="http://en.wikipedia.org/wiki/Main_Page">Wikipedia</a></td>-->
+        <!--<td><a-->
+                <!--href="http://en.citizendium.org/wiki/Welcome_to_Citizendium">Citizendium</a></td>-->
+        <!--<td><a href="http://knol.google.com/">Knol</a></td> <td><a-->
+                <!--href="http://www.theregister.co.uk/">The-->
+                <!--Register</a></td></tr>-->
+    <!--<tr><td><a href=""></a></td> <td><a href=""></a></td> <td><a-->
+                <!--href=""></a></td> <td><a href=""></a></td></tr>-->
+<!--</table>-->
+
+<!--<table width="100%" style="table-layout:fixed;">-->
+    <!--<tr> <th colspan="4"> Entertainment </th> </tr>-->
+    <!--<tr><td><a href="http://www.imdb.com">IMDB</a></td> <td><a-->
+                <!--href="http://kids.niehs.nih.gov/">NIEHS Kids</a></td>-->
+        <!--<td><a href="http://www.theonion.com/content/index">The-->
+                <!--Onion</a></td> <td><a-->
+                <!--href="http://www.phdcomics.com/comics.php">PhD-->
+                <!--Comics</a></td></tr>-->
+    <!--<tr><td><a href="http://www.sluggy.com/">Sluggy Freelance</a></td>-->
+        <!--<td><a href="http://www.dilbert.com/">Dilbert</a></td> <td><a-->
+                <!--href="http://www.nukees.com/">Nukees</a></td> <td><a-->
+                <!--href="http://www.theage.com.au/opinion/danny-katz">Danny-->
+                <!--Katz</a></td></tr>-->
+    <!--<tr><td><a href=""></a></td> <td><a href=""></a></td> <td><a-->
+                <!--href=""></a></td> <td><a href=""></a></td></tr>-->
+    <!--<tr><td><a href=""></a></td> <td><a href=""></a></td> <td><a-->
+                <!--href=""></a></td> <td><a href=""></a></td></tr>-->
+<!--</table>-->
+
+<!--<table width="100%" style="table-layout:fixed;">-->
+    <!--<tr> <th colspan="4"> Institutions </th> </tr>-->
+    <!--<tr><td><a href="http://www.unimelb.edu.au/">Univ. of-->
+                <!--Melbourne</a></td> <td><a-->
+                <!--href="http://www.complex.org.au/">MASCOS</a></td> <td><a-->
+                <!--href="http://www.amsi.org.au/">AMSI</a></td> <td><a-->
+                <!--href="http://www.agu.org/">AGU</a></td></tr>-->
+    <!--<tr><td><a href="http://www.aip.org.au/">Aust. Inst. of Phys.-->
+                <!--(AIP)</a></td> <td><a href="http://www.aip.org/">Amer.-->
+                <!--Inst. of Phys. (AIP)</a></td> <td><a-->
+                <!--href="http://www.complexsystems.net.au/">COSNet</a></td>-->
+        <!--<td><a href="http://www.primath.org/">PRIMA</a></td></tr>-->
+    <!--<tr><td><a href="http://www.ams.org/">AMS</a></td> <td><a-->
+                <!--href="http://www.austms.org.au/">AustMS</a></td> <td><a-->
+                <!--href="http://nf.nci.org.au/">APAC</a></td> <td><a-->
+                <!--href="http://www.vpac.org/">VPAC</a></td></tr>-->
+    <!--<tr><td><a href="http://www.arc.gov.au/">ARC</a></td> <td><a-->
+                <!--href="http://www.esf.org/">ESF (Eur. Sci.-->
+                <!--Foundation)</a></td> <td><a-->
+                <!--href="http://www.acm.org/">ACM</a></td> <td><a-->
+                <!--href="http://www.iamp.org/">IAMP</a></td></tr>-->
+    <!--<tr><td><a href="http://www.iop.org/">IOP</a></td> <td><a-->
+                <!--href=""></a></td> <td><a href=""></a></td> <td><a-->
+                <!--href=""></a></td></tr>-->
+    <!--<tr><td><a href=""></a></td> <td><a href=""></a></td> <td><a-->
+                <!--href=""></a></td> <td><a href=""></a></td></tr>-->
+<!--</table>-->
+
+<!--<table width="100%" style="table-layout:fixed;">-->
+    <!--<tr> <th colspan="4"> Conferences and Workshops</th> </tr>-->
+    <!--<tr><td><a href="">Monte Carlo Alg. in Stat. Phys.</a></td> <td><a-->
+                <!--href="http://www.statphys.org.au">STATPHYS 24</a></td>-->
+        <!--<td><a href="http://www.math.rutgers.edu/events/smm/">Rutgers-->
+                <!--Stat. Mech. Meeting</a></td> <td><a-->
+                <!--href="http://www.primath.org/prima2009/">PRIMA-->
+                <!--congress</a></td></tr>-->
+    <!--<tr><td><a href="http://www.birs.ca/">Banff</a></td> <td><a-->
+                <!--href=""></a></td> <td><a href=""></a></td> <td><a-->
+                <!--href=""></a></td></tr>-->
+    <!--<tr><td><a href=""></a></td> <td><a href=""></a></td> <td><a-->
+                <!--href=""></a></td> <td><a href=""></a></td></tr>-->
+    <!--<tr><td><a href=""></a></td> <td><a href=""></a></td> <td><a-->
+                <!--href=""></a></td> <td><a href=""></a></td></tr>-->
+<!--</table>-->
+
+<!--<table width="100%" style="table-layout:fixed;">-->
+    <!--<tr> <th colspan="4"> Climate change </th> </tr>-->
+    <!--<tr><td><a href="http://www.realclimate.org">Real Climate</a></td>-->
+        <!--<td><a href="http://www.ipcc.ch/">IPCC</a></td> <td><a-->
+                <!--href="http://www.garnautreview.org.au/">Garnaut-->
+                <!--Review</a></td> <td><a-->
+                <!--href="http://data.giss.nasa.gov/">GISS-->
+                <!--(data)</a></td></tr>-->
+    <!--<tr><td><a-->
+                <!--href="http://nsidc.org/data/seaice_index/daily.html">NSIDC-->
+                <!--Sea Ice</a></td> <td><a-->
+                <!--href="http://www.purdue.edu/transcom/">Transcom</a></td>-->
+        <!--<td><a-->
+                <!--href="http://www.metoffice.gov.uk/climatechange/science/hadleycentre/">Hadley-->
+                <!--Centre</a></td> <td><a-->
+                <!--href="http://www.occ.gov.uk/activities/stern.htm">Stern-->
+                <!--Review</a></td></tr>-->
+    <!--<tr><td><a href="http://www.caspi.unimelb.edu.au/">CASPI</a></td>-->
+        <!--<td><a href="http://www.cmar.csiro.au/">CMAR, CSIRO</a></td>-->
+        <!--<td><a href="http://www.ccrc.unsw.edu.au/">Climate change-->
+                <!--research centre</a></td> <td><a-->
+                <!--href="http://www.co2crc.com.au/">CO2CRC</a></td></tr>-->
+    <!--<tr><td><a-->
+                <!--href="http://www.sustainability.vic.gov.au/">Sustainability-->
+                <!--Victoria</a></td> <td><a href=""></a></td> <td><a-->
+                <!--href=""></a></td> <td><a href=""></a></td></tr>-->
+    <!--<tr><td><a href=""></a></td> <td><a href=""></a></td> <td><a-->
+                <!--href=""></a></td> <td><a href=""></a></td></tr>-->
+    <!--<tr><td><a href=""></a></td> <td><a href=""></a></td> <td><a-->
+                <!--href=""></a></td> <td><a href=""></a></td></tr>-->
+<!--</table>-->
+
+<!--<table width="100%" style="table-layout:fixed;">-->
+    <!--<tr> <th colspan="4"> Science </th> </tr>-->
+    <!--<tr><td><a href="http://arxiv.org">arXiv</a></td> <td><a-->
+                <!--href="http://www.research.att.com/~njas/sequences/">-->
+                <!--Encyclopedia of Int. Seq. </a></td> <td><a-->
+                <!--href="http://physics.nist.gov/cuu/Constants/index.html">NIST:-->
+                <!--fundamental const.</a></td> <td><a-->
+                <!--href="http://au.arxiv.org">au.arXiv</a></td></tr>-->
+    <!--<tr><td><a-->
+                <!--href="http://folding.stanford.edu/English/Main">Folding@home</a></td>-->
+        <!--<td><a href="http://www.plos.org/">PLOS</a></td> <td><a-->
+                <!--href="http://www.knotplot.com/zoo/">Knot zoo</a></td>-->
+        <!--<td><a href=""></a></td></tr>-->
+    <!--<tr><td><a href=""></a></td> <td><a href=""></a></td> <td><a-->
+                <!--href=""></a></td> <td><a href=""></a></td></tr>-->
+    <!--<tr><td><a href=""></a></td> <td><a href=""></a></td> <td><a-->
+                <!--href=""></a></td> <td><a href=""></a></td></tr>-->
+<!--</table>-->
+
+<!--<table width="100%" style="table-layout:fixed;">-->
+    <!--<tr> <th colspan="4"> Software </th> </tr>-->
+    <!--<tr><td><a href="http://www.drupal.org">Drupal</a></td> <td><a-->
+                <!--href="http://www.gnu.org/software/gsl/">GNU Sci. Lib.-->
+                <!--(GSL)</a></td> <td><a-->
+                <!--href="http://sprng.cs.fsu.edu/">SPRNG</a></td> <td><a-->
+                <!--href="http://www.gtk.org/">GLib</a></td></tr>-->
+    <!--<tr><td><a href="http://cs.anu.edu.au/~bdm/nauty/">Nauty</a></td>-->
+        <!--<td><a href="http://gmplib.org/">GNU Mult. Prec. Arithm.-->
+                <!--(GMP)</a></td> <td><a-->
+                <!--href="http://www.r-project.org/">R</a></td> <td><a-->
+                <!--href="http://www.tug.org/">TeX Users Group-->
+                <!--(TUG)</a></td></tr>-->
+    <!--<tr><td><a-->
+                <!--href="http://www.nvidia.com/object/cuda_home.html">CUDA</a></td>-->
+        <!--<td><a href="http://www.python.org/">Python</a></td> <td><a-->
+                <!--href="http://jabref.sourceforge.net/">JabRef</a></td>-->
+        <!--<td><a href="http://sourceforge.net/">Sourceforge</a></td></tr>-->
+    <!--<tr><td><a href="http://freshmeat.net/">Freshmeat</a></td> <td><a-->
+                <!--href="http://www.gnu.org/software/make/manual/make.html">GNU-->
+                <!--Make</a></td> <td><a-->
+                <!--href="http://www.gnu.org/">GNU</a></td> <td><a-->
+                <!--href="http://gams.nist.gov/">GAMS</a></td></tr>-->
+    <!--<tr><td><a href="http://www.netlib.org/toms/">toms</a></td> <td><a-->
+                <!--href="http://www.netlib.org/">Netlib</a></td> <td><a-->
+                <!--href="http://www.cs.sunysb.edu/~algorith/">S. B.-->
+                <!--Algorithm Repository</a></td> <td><a-->
+                <!--href="http://www.itl.nist.gov/div897/sqg/dads/">Dictionary-->
+                <!--of Algorithms</a></td></tr>-->
+    <!--<tr><td><a-->
+                <!--href="http://sourceforge.net/projects/pgf/">PGF/TikZ</a></td>-->
+        <!--<td><a href="http://www.selenic.com/mercurial/wiki/">Mercurial-->
+                <!--(CVS)</a></td> <td><a-->
+                <!--href="http://www.ubuntu.com/">Ubuntu</a></td> <td><a-->
+                <!--href="http://www.image.ucar.edu/DAReS/DART/">DART (Data-->
+                <!--Assim.)</a></td></tr>-->
+    <!--<tr><td><a href="http://www.ctan.org/">CTAN (TeX)</a></td> <td><a-->
+                <!--href="http://cran.r-project.org/">CRAN (R)</a></td>-->
+        <!--<td><a-->
+                <!--href="http://directory.fsf.org/">Free Software-->
+                <!--Directory</a></td>-->
+        <!--<td><a href="http://drupalmodules.com/">Drupal-->
+                <!--modules</a></td></tr>-->
+    <!--<tr><td><a href="http://portal.acm.org/portal.cfm">ACM-->
+                <!--Portal</a></td> <td><a-->
+                <!--href="http://www.finkproject.org/">Fink</a></td> <td><a-->
+                <!--href=""></a></td> <td><a href=""></a></td></tr>-->
+    <!--<tr><td><a href=""></a></td> <td><a href=""></a></td> <td><a-->
+                <!--href=""></a></td> <td><a href=""></a></td></tr>-->
+<!--</table>-->
+
+<!--<table width="100%" style="table-layout:fixed;">-->
+    <!--<tr> <th colspan="4"> "My" pages (at least, pages I've created)-->
+    <!--</th> </tr>-->
+    <!--<tr> <td><a-->
+                <!--href="http://lattice.complex.unimelb.edu.au/mcalgorithms/">Monte-->
+                <!--Carlo algorithms conference</a></td> <td><a-->
+                <!--href="http://peterclisby.blogspot.com/">Peter Clisby-->
+                <!--campaign page</a></td> <td><a-->
+                <!--href="http://sites.google.com/site/mcforaeuntpresident/">Matthew-->
+                <!--Cranitch campaign page</a></td></tr>-->
+    <!--<td></td>-->
+<!--</table>-->
             </div> <!-- content -->
         </div> <!-- contentblock -->
         <div id="push"></div>
