--- a/research/publications/index.html
+++ b/research/publications/index.html
@@ -75,6 +75,16 @@
                 <h3> Articles, book chapters, and other publications </h3>
                 <table>
                     <tr><td>
+                            Nathan Clisby, High resolution Monte Carlo
+                            study of the Domb-Joyce model.
+                            <a
+                                href="https://arxiv.org/abs/1705.01249">arXiv:1705.01249</a>,
+                            <a
+                                href="http://stacks.iop.org/1742-6596/921/i=1/a=012012">J.
+                                Phys.: Conf. Ser.</a> <b>921</b>: 012012
+                            (2017).
+                    </td></tr>
+                    <tr><td>
                             Nathan Clisby, 
                             Monte Carlo study of four-dimensional
                             self-avoiding walks of up to one billion steps,
@@ -86,7 +96,10 @@
                             Exact enumeration of self-avoiding walks on
                             BCC and FCC lattices,
                             <a
-                            href="http://arxiv.org/abs/1703.09340">arXiv:1703.09340</a> (2017).
+                                href="http://arxiv.org/abs/1703.09340">arXiv:1703.09340</a>,
+                           <a
+                               href="https://doi.org/10.1088/1742-5468/aa819f">J.
+                               Stat. Mech.</a> 083208 (2017).
                             See <a
                                 href="https://www.staff.science.uu.nl/~bisse101/SAW/">here</a>
                             for the SAWdoubler release page, which
@@ -96,7 +109,10 @@
                             Nathan Clisby, Scale-free Monte Carlo method for calculating the
                             critical exponent &gamma; of self-avoiding walks,  <a
                             href="http://arxiv.org/abs/1701.08415">arXiv:1701.08415</a>,
-                            submitted to J. Phys. A: Math. Theor. (2017).
+                            <a
+                                href="https://doi.org/10.1088/1751-8121/aa7231">J. Phys.
+                                A.: Math. Theor.</a> <b>50</b>: 264003
+                            (2017).
                     </td></tr>
                     <tr><td>
                             Nathan Clisby and Burkhard D&uuml;nweg,
