--- a/maia/index.html
+++ b/maia/index.html
@@ -29,17 +29,21 @@
             </div>
 
 
-            Welcome to my homepage! 
+            <!--Welcome to my homepage! -->
+            Welcome to Maia&prime;s homepage! 
+                </p>
+                <!--<p>-->
+                <!--I am Maia and I am almost nine years old. I go to BSPS (<a-->
+                    <!--href="http://brunswicksouthps.vic.edu.au/">Brunswick South Primary School</a>) and I am in third grade. I-->
+        <!--have no brothers or sisters and I&prime;m not sure I want them!!! I live in Melbourne, Australia. I like reading and writing.-->
+            <!--I have written a &ldquo;choose your own adventure&rdquo; book. In mine, you don&prime;t choose your adventure, you pick a path;-->
+          <!--sometimes you get stuck, sometimes you don&prime;t. Every time you will get back on track. I&prime;ll let you see it now ....-->
+                <!--</p>-->
+                <p>
+            Read  <a href="treacherous_tower">Treacherous Tower</a>.
                 </p>
                 <p>
-                I am Maia and I am almost nine years old. I go to BSPS (<a
-                    href="http://brunswicksouthps.vic.edu.au/">Brunswick South Primary School</a>) and I am in third grade. I
-        have no brothers or sisters and I&prime;m not sure I want them!!! I live in Melbourne, Australia. I like reading and writing.
-            I have written a &ldquo;choose your own adventure&rdquo; book. In mine, you don&prime;t choose your adventure, you pick a path;
-          sometimes you get stuck, sometimes you don&prime;t. Every time you will get back on track. I&prime;ll let you see it now ....
-                </p>
-                <p>
-            Read Treacherous Tower <a href="treacherous_tower">here</a>.
+            Read  <a href="facts_and_fiction">Facts and Fiction</a>.
                 </p>
             </div> <!-- content -->
         </div> <!-- contentblock -->
