Added Facts and Fiction International Murder

--- a/maia/index.html
+++ b/maia/index.html
@@ -41,9 +41,16 @@
                 <!--</p>-->
                 <p>
             Read  <a href="treacherous_tower">Treacherous Tower</a>.
+            (Published April 2015.)
                 </p>
                 <p>
             Read  <a href="facts_and_fiction">Facts and Fiction</a>.
+            (Published December 2017.)
+                </p>
+                <p>
+            Read  <a href="facts_and_fiction2">Facts and Fiction:
+                International Murder</a>.
+            (Published January 2018.)
                 </p>
             </div> <!-- content -->
         </div> <!-- contentblock -->
