--- a/projects/lrw2/index.html
+++ b/projects/lrw2/index.html
@@ -146,6 +146,12 @@ random walk (refresh).
 <center>
     <button onclick="refresh_path()"><h3>Generate new random walk<h3></button>
     <!--<div style="whitespace:no-wrap;">-->
+    &nbsp;&nbsp;<button onClick="increase_z()" style="margin:0;padding:0;line-height:0.8em;">
+        <h3>&nbsp;&nbsp;Increase zoom&nbsp;&nbsp;</h3>
+    </button>
+    &nbsp;&nbsp;<button onClick="decrease_z()" style="margin:0;padding:0;line-height:0.8em;">
+        <h3>&nbsp;&nbsp;Decrease zoom&nbsp;&nbsp;</h3>
+    </button>
     &nbsp;&nbsp;<button onClick="increase_a()" style="margin:0;padding:0;line-height:0.8em;">
         <h3>&nbsp;&nbsp;Increase alpha&nbsp;&nbsp;</h3>
     </button>
@@ -163,7 +169,9 @@ random walk (refresh).
         </center><br/>
 <center>
 <form name="path_parameters">
-Length: <input type="text" name="n" id="n" size="4" value="100"/>
+Length: <input type="text" name="n" id="n" size="8" value="100"/>
+&nbsp; &nbsp; &nbsp; 
+Zoom: <input type="text" name="z" id="z" size="12" value="1.0"/>
 &nbsp; &nbsp; &nbsp; 
 Alpha: <input type="text" name="a" id="a" size="4" value="1.0"/>
 &nbsp; &nbsp; &nbsp; 
