Slightly improved lrw2. Now only updates bounding box when alpha changed, or new walk.

--- a/projects/lrw2/index.html
+++ b/projects/lrw2/index.html
@@ -171,6 +171,8 @@ random walk (refresh).
 <form name="path_parameters">
 Length: <input type="text" name="n" id="n" size="8" value="100"/>
 &nbsp; &nbsp; &nbsp; 
+Visible: <input type="text" name="v" id="v" size="8" value="100"/>
+&nbsp; &nbsp; &nbsp; 
 Zoom: <input type="text" name="z" id="z" size="12" value="1.0"/>
 &nbsp; &nbsp; &nbsp; 
 Alpha: <input type="text" name="a" id="a" size="4" value="1.0"/>
