Slightly better at preserving parity for holeyhp

--- a/projects/holeyhp/index.html
+++ b/projects/holeyhp/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Hamiltonian path generator</title>
-    <link rel="canonical" href="/projects/hamiltonian_path/" />
+    <link rel="canonical" href="/projects/holeyhp/" />
     <link rel="stylesheet" type="text/css" href="/css/nc.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
