--- a/projects/lrw2/index.html
+++ b/projects/lrw2/index.html
@@ -69,8 +69,8 @@
         }
         if (w > h) w = h;
         if (h > w) h = w;
-        <!--document.write('<svg id="path_svg" width="'+w+'" height="'+h+'">');-->
-        document.write('<svg id="path_svg" width="'+w+'" height="'+h+'" style="background-color: #000;">');
+        document.write('<svg id="path_svg" width="'+w+'" height="'+h+'">');
+        <!--document.write('<svg id="path_svg" width="'+w+'" height="'+h+'" style="background-color: #000;">');-->
         
     }
 
