Added what fruit are you - twine quiz

--- a/maia/index.html
+++ b/maia/index.html
@@ -52,6 +52,10 @@
                 International Murder</a>.
             (Published January 2018.)
                 </p>
+                <p>
+            Take the quiz:  <a href="what_fruit">What fruit are you?</a>.
+            (Published August 2018.)
+                </p>
             </div> <!-- content -->
         </div> <!-- contentblock -->
         <div id="push"></div>
