--- a/index.html
+++ b/index.html
@@ -78,10 +78,7 @@
                 <a
                     href="http://www.swinburne.edu.au/science-engineering-technology/schools-departments/science/mathematics/">Department of Mathematics</a> at 
                 <a href="http://www.swinburne.edu.au/">Swinburne
-                    University of Technology</a>,
-                    supported by an ARC Future Fellowship.
-                I'm also an associate investigator of 
-                <a href="http://acems.org.au/">ACEMS</a>.
+                    University of Technology</a>.
                 </p>
                 <p>
             Here you will find some details about my <a href="/research/">research</a> (including
